@@ -1,0 +1,5 @@
+Usage:
+
+  script/generate preferences
+
+This will create a migration that will add the proper table to store preferences.
