@@ -1,0 +1,7 @@
+class PreferencesGenerator < Rails::Generator::Base
+  def manifest
+    record do |m|
+      m.migration_template 'migration.rb', 'db/migrate', :migration_file_name => 'create_preferences'
+    end
+  end
+end
